--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1274,12 +1274,15 @@ button:hover {
 
 	&_button-wrapper {
 		@extend .tweet-button-wrapper;
+		color: rgb(255, 255, 255);
+		text-decoration: none;
 		background-color: black;
 		height: 36px;
 		min-width: 120.148px;
 		max-width: 120.148px;
 		padding: 0px 16px;
 		box-sizing: border-box;
+		border-radius: 99px;
 		//border: 1px solid rgb(247, 249, 249);
 	}
 
@@ -1292,6 +1295,7 @@ button:hover {
 		height: 20px;
 		font-weight: 700;
 		text-size-adjust: 100%;
+		color: rgb(255, 255, 255);
 	}
 }
 
@@ -1355,7 +1359,7 @@ button:hover {
 
 		.wrapper1 {
 			@extend .wrappers--flex;
-			min-width: 236px;
+			width: 100%;
 			margin-right: 12px;
 			box-sizing: border-box;
 			flex-direction: column;
@@ -1376,8 +1380,8 @@ button:hover {
 				}
 			}
 
-			.trending-wrapper_topics{
-				margin-top:3.5px;
+			.trending-wrapper_topics {
+				margin-top: 3.5px;
 			}
 		}
 	}
@@ -1421,6 +1425,7 @@ button:hover {
 			color: rgb(29, 155, 240);
 			text-decoration: none;
 			font-size: 15px;
+			font-weight: 400;
 		}
 	}
 }
@@ -1480,12 +1485,28 @@ button:hover {
 		}
 
 		&_user-info {
-			@extend .profile-wrapper_user-info;
+			display: flex;
 			margin-right: 12px;
+			display: flex;
+			flex-direction: column;
+			width: 100%;
+			//flex:4 0 auto;
+			padding: 0 12px;
+			font-size: 15px;
+			box-sizing: border-box;
+
+			b {
+				padding-bottom: 2px;
+			}
+			div {
+				padding-top: 2px;
+				color: #536471;
+			}
 		}
 
 		&_image {
 			@extend .profile-wrapper_image;
+			margin-right: 12px;
 		}
 
 		span {
@@ -1506,6 +1527,7 @@ button:hover {
 
 	&_button_wrapper {
 		@extend .tweet-button-wrapper;
+		border-radius: 99px;
 		height: 32px;
 		width: 78px;
 		display: flex;
@@ -1541,37 +1563,36 @@ button:hover {
 
 .more-info {
 	display: none;
-	@media screen and (width>=988px){
-display: flex;
-	width: 350px;
-	height: 40px;
-	margin: 0 16px;
-	box-sizing: border-box;
-	flex-wrap: wrap;
-	&_elements {
+	@media screen and (width>=988px) {
 		display: flex;
-		align-items: center;
-	}
-
-	&_text {
-		font-size: 13px;
-		font-weight: 400;
-		margin-right: 12px;
-		display: flex;
-		align-items: center;
-		color: rgb(83, 100, 113);
-	}
-
-	&_ellipsis {
-		width: 17px;
-		height: 15.5px;
-		padding: 3px 2px 0px 2px;
+		width: 288px;
+		height: 60px;
+		margin: 0 16px;
 		box-sizing: border-box;
-		display: flex;
-		align-items: center;
-	}
-	}
+		flex-wrap: wrap;
+		&_elements {
+			display: flex;
+			align-items: center;
+		}
 
+		&_text {
+			font-size: 13px;
+			font-weight: 400;
+			margin-right: 12px;
+			display: flex;
+			align-items: center;
+			color: rgb(83, 100, 113);
+		}
+
+		&_ellipsis {
+			width: 17px;
+			height: 15.5px;
+			padding: 3px 2px 0px 2px;
+			box-sizing: border-box;
+			display: flex;
+			align-items: center;
+		}
+	}
 }
 
 .whiteSpace-right {
