--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -91,6 +91,14 @@ li {
 	display: none !important;
 }
 
+.wrapper{
+	height: 100%;
+	width: min-content;
+
+	overflow-y: scroll;
+
+}
+
 .wrappers {
 	width: 100%;
 	height: 100%;
@@ -165,8 +173,8 @@ li {
 		margin: 0;
 		padding: 0 4px;
 		order: unset;
-		overflow-y: scroll;
-		/* justify-content: space-between; */
+		overflow-y: hidden;
+		justify-content: space-between;
 		align-items: center;
 		top: 0;
 		overflow-x: hidden;
@@ -223,11 +231,13 @@ li {
 
 	@media only screen and (width>=500px) and (height>=500px) {
 		display: flex;
+		height: 412px;
+		flex:1 1 auto;
 		flex-direction: column;
 		align-items: center;
 		justify-content: start;
 		/* height: 100vh; */
-		margin: 0 0 4px 0;
+		margin: 0;
 		z-index: 0;
 		/* border:solid red */
 	}
@@ -600,14 +610,16 @@ button:hover {
 .profile-wrapper {
 	display: none;
 
-	@media only screen and (width>=500px) and (height>500px) {
+	@media only screen and (width>=500px) and (height>=500px) {
 		display: flex;
 		min-height: 64px;
 		width: 64px;
 		//box-sizing: border-box;
 		//padding: 4px;
 		padding: 0;
-		margin: auto 0px 12px 0px;
+		margin: 12px 0px 12px 0px;
+		//position: absolute;
+		z-index: 2;
 		//padding-top: 8px;
 		//align-self: center;
 
