--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -92,10 +92,15 @@ li {
 }
 
 .wrapper{
-	height: 100%;
+	display: flex;
+	flex-direction: column;
+	//justify-content: ;
+	max-height: 100%;
 	width: min-content;
-
+	//flex-wrap: wrap;
 	overflow-y: scroll;
+	//z-index: 1;
+	flex:1 0 auto;
 
 }
 
@@ -140,7 +145,7 @@ li {
 
 	@media only screen and (width>=500px) and (height>=500px) {
 		flex-direction: row;
-		overflow-x: scroll;
+		//overflow-x: scroll;
 	}
 }
 
@@ -174,7 +179,7 @@ li {
 		padding: 0 4px;
 		order: unset;
 		overflow-y: hidden;
-		justify-content: space-between;
+		justify-content: start;
 		align-items: center;
 		top: 0;
 		overflow-x: hidden;
@@ -225,21 +230,20 @@ li {
 
 .nav {
 	width: 100%;
-	height: fit-content;
+	height: max-content;
 	margin: 0;
 	padding: 0;
 
 	@media only screen and (width>=500px) and (height>=500px) {
 		display: flex;
 		height: 412px;
-		flex:1 1 auto;
+		flex:1 0 auto;
 		flex-direction: column;
 		align-items: center;
 		justify-content: start;
-		/* height: 100vh; */
 		margin: 0;
 		z-index: 0;
-		/* border:solid red */
+		//overflow-y: scroll;
 	}
 	@media only screen and (width>=600px) {
 		box-sizing: border-box;
@@ -334,11 +338,17 @@ li {
 
 		@media only screen and (width>=500px) and (height>=500px) {
 			width: 60px;
-			height: min-content;
+			max-height: 402px;
+			height: 402px;
 			flex-direction: column;
 			align-items: center;
 			justify-content: start;
 			margin: 2px 0 4px 0;
+			//flex:1 0 auto;
+		}
+
+		@media screen and (height>=615px) {
+			min-height: 502.5px;
 		}
 
 		@media only screen and (width>=600px) {
@@ -478,6 +488,7 @@ button:hover {
 		justify-content: center;
 		align-items: center;
 		margin: 4px 0;
+		//align-self: flex-start;
 	}
 
 	@media screen and (width>=998px) {
@@ -614,12 +625,13 @@ button:hover {
 		display: flex;
 		min-height: 64px;
 		width: 64px;
+		flex:0 0 auto;
 		//box-sizing: border-box;
 		//padding: 4px;
 		padding: 0;
-		margin: 12px 0px 12px 0px;
-		//position: absolute;
-		z-index: 2;
+		margin: 12px 0px 28px 0px;
+		//position: relative;
+		//z-index: 0;
 		//padding-top: 8px;
 		//align-self: center;
 
