--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -1036,6 +1036,8 @@ button:hover {
 	&_header {
 		display: flex;
 		font-size: 15px;
+		max-height: 20px;
+		margin-bottom: 2px;
 		font-weight: 400;
 		color: rgb(83, 100, 113);
 		line-height: 20px;
@@ -1071,11 +1073,41 @@ button:hover {
 		height: max-content;
 		max-width: 100%;
 		word-wrap: break-word;
+		line-height: 20px;
 	}
 	&_media{
 		width: 100%;
 		height: 357.5px;
 		border-radius: 5%;
+		margin-top: 12px;
+	}
+	&_statistics-row{
+		display: flex;
+		justify-content: space-between;
+		width: 100%;
+		height: 32px;
+		//padding-top: 12px;
+
+		// &_icons-wrapper{
+		// 	display: flex;
+
+		// }
+		&_group{
+			display:flex;
+			align-items: start;
+			justify-content: space-between;
+			width: max-content;
+		}
+
+		&_icons{
+			width: 18.75px;
+			aspect-ratio: 1/1;
+			//padding-top: 4px;
+		}
+		&_values{
+			//align-self: start;
+			margin:0 15px;
+		}
 	}
 }
 
