--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -66,9 +66,9 @@ li {
 	}
 }
 
-.hidden615-h {
+.hidden750-h {
 	display: none !important;
-	@media only screen and (width>=500px) and (height>=615px) {
+	@media only screen and (width>=500px) and (height>=750px) {
 		display: flex !important;
 	}
 }
@@ -98,7 +98,6 @@ li {
 	align-items: start;
 
 	@media screen and (width>=500px) and (height >=500px) {
-
 		flex-direction: column;
 		//justify-content: ;
 		min-height: max-content;
@@ -108,8 +107,12 @@ li {
 		//flex-wrap: wrap;
 		overflow-y: visible;
 		//z-index: 1;
-		flex: 1 0 auto;
+		//flex: 1 0 auto;
 		padding: 0;
+
+		@media screen and (height>=855px) {
+			min-height: 704.5px;
+		}
 	}
 }
 
@@ -188,11 +191,15 @@ li {
 		padding: 0 4px;
 		order: unset;
 		overflow-y: hidden;
-		justify-content: start;
+		justify-content: space-between;
 		align-items: center;
 		top: 0;
 		overflow-x: hidden;
 		overflow-y: scroll;
+	}
+
+	@media screen and (height>=662px) {
+		min-height: 100%;
 	}
 	@media only screen and (width>=600px) {
 		padding: 0;
@@ -357,12 +364,16 @@ li {
 			justify-content: start;
 			margin: 2px 0 4px 0;
 			overflow-y: visible;
-			flex:1 0 auto;
+			flex: 1 0 auto;
 			//flex:1 0 auto;
+
+			// 	@media screen and (height>=855px) {
+			// 	min-height:582.5px;
+			// }
 		}
 
 		@media screen and (width>=500px) and (height>=615px) {
-			min-height: 502.5px;
+			//min-height: 502.5px;
 		}
 
 		@media only screen and (width>=600px) {
@@ -382,6 +393,9 @@ li {
 		@media only screen and (width>=500px) {
 			height: 50.25px;
 			//padding: 4px;
+			@media screen and (height>=855px) {
+				padding: 4px 0px;
+			}
 		}
 
 		@media only screen and (width>=688px) {
@@ -402,6 +416,9 @@ li {
 				font-family: chirp;
 				font-weight: bold;
 			}
+			@media screen and (height>=855px) {
+				padding: 4px 0px;
+			}
 		}
 	}
 
@@ -411,6 +428,10 @@ li {
 		/* @media only screen and (width>=988px) {
 			display: none;
 		} */
+
+		@media screen and (height>=855px) {
+			padding: 4px 0px;
+		}
 	}
 
 	&_li--hashtag-icon {
@@ -498,6 +519,10 @@ button:hover {
 		align-items: center;
 		margin: 4px 0;
 		//align-self: flex-start;
+
+			@media screen and (height>=900px) {
+			margin: 16px 0px;
+		}
 	}
 
 	@media screen and (width>=998px) {
@@ -643,15 +668,17 @@ button:hover {
 		//z-index: 0;
 		//padding-top: 8px;
 		//align-self: center;
+	}
 
-		@media screen and (height>=700px) {
-			position: absolute;
-			bottom: 0px;
-			z-index: 0;
-			margin: 12px 0;
-			z-index: 2;
-			background-color: white;
-		}
+	@media screen and (height>=663px) {
+		//position: absolute;
+		//bottom: 0px;
+		//z-index: 0;
+		//margin: 12px 0;
+		//z-index: 2;
+		//background-color: white;
+
+		//margin-top: auto;
 	}
 
 	@media screen and (width>=688px) {
@@ -1032,10 +1059,9 @@ button:hover {
 		box-sizing: border-box;
 		margin-top: 12px;
 		@media screen and (width>=500px) {
-		margin-top: 13px;
+			margin-top: 13px;
+		}
 	}
-	}
-
 
 	&_profile-picture-wrapper {
 		width: 40px;
@@ -1068,7 +1094,6 @@ button:hover {
 		&_user-name {
 			font-weight: 700;
 			color: black;
-
 		}
 		&_checkmark-wrapper {
 			margin-left: 2px;
