--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -93,7 +93,7 @@ li {
 
 .wrapper {
 	display: flex;
-	width: 100%;
+	min-width: 100%;
 	height: 100%;
 	align-items: start;
 
@@ -175,12 +175,15 @@ li {
 	// /* margin: 0; */ commented out to prevent fixed position being pushed to top
 	margin: 0;
 	padding: 0;
+	margin-top:auto;
 	border-top: var(--main-border-style);
+	height: 53.5px;
 	min-height: 53.5px;
 	max-height: 53.5px; //both heights required + purposefully diff from twitter actual height in order to avoid creating wrapper inside nav
 	width: 100%;
 	box-sizing: border-box;
 	background-color: white;
+	//border-bottom:1px solid white;
 
 	@media only screen and (width>=500px) and (height>=500px) {
 		flex-direction: column;
@@ -200,11 +203,13 @@ li {
 		top: 0;
 		overflow-x: hidden;
 		overflow-y: scroll;
-	}
 
-	@media screen and (height>=662px) {
+		@media screen and (height>=662px) {
 		min-height: 100%;
 	}
+	}
+
+
 	@media only screen and (width>=600px) {
 		padding: 0;
 		width: 88px;
@@ -357,7 +362,9 @@ li {
 		list-style: none;
 		margin: 0;
 		padding: 0;
+		height: 100%;
 		max-height: 100%;
+		width: 100%;
 
 		@media only screen and (width>=500px) and (height>=500px) {
 			width: 60px;
@@ -433,7 +440,7 @@ li {
 			display: none;
 		} */
 
-		@media screen and (height>=855px) {
+		@media screen and (width>=500px) and (height>=855px) {
 			padding: 4px 0px;
 		}
 	}
@@ -1051,8 +1058,7 @@ button:hover {
 .timeline-backup {
 	width: 100%;
 	box-sizing: border-box;
-	padding: 0 16px;
-	box-sizing: border-box;
+	padding: 0;
 	margin-top: -0.5px;
 
 	@media screen and (width>=500px) {
@@ -1065,6 +1071,8 @@ button:hover {
 		width: 100%;
 		box-sizing: border-box;
 		margin-top: 12px;
+		padding: 0px 17px 12px;
+		border-bottom: var(--main-border-style);
 		@media screen and (width>=500px) {
 			margin-top: 13px;
 		}
@@ -1130,11 +1138,18 @@ button:hover {
 		word-wrap: break-word;
 		line-height: 18px;
 	}
+	&_media-wrapper{
+		width: 100%;
+		height: 357.5px;
+		margin-top: 14px;
+		box-sizing: border-box;
+		border:1px solid white;
+	}
 	&_media {
 		width: 100%;
 		height: 357.5px;
 		border-radius: 5%;
-		margin-top: 14px;
+		//margin-top: 14px;
 	}
 	&_statistics-row {
 		display: flex;
