enabled onload autofocus on first nav element + focused based alternate svg path/color for first nav element

--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -37,6 +37,10 @@
 	color: #536471;
 }
 
+:focus{
+	outline:0;
+}
+
 section,
 div,
 p,
@@ -479,9 +483,9 @@ overflow-x: visible;
 			font-weight: bold;
 		}
 
-		.nav_nav-icons{
+		/* .nav_nav-icons{
 			fill: black;
-		}
+		} */
 	}
 
 	&_nav-icons {
