--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -37,8 +37,8 @@
 	color: #536471;
 }
 
-:focus{
-	outline:0;
+:focus {
+	outline: 0;
 }
 
 section,
@@ -95,8 +95,8 @@ li {
 	display: none !important;
 }
 
-.overflow-x-v{
-overflow-x: visible;
+.overflow-x-v {
+	overflow-x: visible;
 }
 
 .wrapper {
@@ -223,7 +223,6 @@ overflow-x: visible;
 		max-width: unset;
 		width: 88px;
 		border: none;
-
 	}
 
 	@media only screen and (width>=688px) {
@@ -351,7 +350,7 @@ overflow-x: visible;
 			border-radius: 0;
 			padding: 0;
 			margin: 0;
-			fill: rgb(0,0,0);
+			fill: rgb(0, 0, 0);
 		}
 
 		@media only screen and (width>=500px) {
@@ -375,9 +374,6 @@ overflow-x: visible;
 		height: 100%;
 		max-height: 100%;
 		width: 100%;
-
-
-
 
 		@media only screen and (width>=500px) and (height>=500px) {
 			width: 60px;
@@ -506,7 +502,6 @@ overflow-x: visible;
 			padding: 0;
 			margin-right: 20px;
 		}
-
 	}
 
 	&_nav-icons:active {
@@ -933,7 +928,7 @@ button:hover {
 		padding: 0;
 		margin: 0;
 		flex: 1 1 auto;
-		fill: rgb(0,0,0);
+		fill: rgb(0, 0, 0);
 
 		@media only screen and (width>=500px) {
 			display: none;
@@ -1113,7 +1108,7 @@ button:hover {
 		border-bottom: var(--main-border-style);
 
 		@media screen and (width>=500px) {
-			padding:0px 16px 12px;
+			padding: 0px 16px 12px;
 		}
 	}
 
@@ -1145,9 +1140,21 @@ button:hover {
 		box-sizing: border-box;
 		padding: 0 0;
 
+		&_user-name-wrapper {
+			overflow-x: hidden;
+			overflow-y: hidden;
+			overflow-wrap: normal;
+		}
+
 		&_user-name {
+			max-height: 100%;
 			font-weight: 700;
 			color: black;
+			overflow-wrap: normal;
+			overflow-x: hidden;
+			overflow-y: hidden;
+			white-space: nowrap;
+			text-overflow: ellipsis;
 		}
 		&_checkmark-wrapper {
 			margin-left: 2px;
@@ -1160,15 +1167,19 @@ button:hover {
 		&_handle {
 			margin-left: 4px;
 			margin-right: 4px;
+			overflow-x: hidden;
+			white-space: nowrap;
+			text-overflow: ellipsis;
 		}
 		&_posting-time {
 			margin-left: 4px;
+			margin-right:20px;
 		}
 
 		&_ellipsis {
 			display: flex;
 			align-items: center;
-			width: 18.75px;
+			min-width: 18.75px;
 			aspect-ratio: 1/1;
 			margin-left: auto;
 		}
@@ -1230,13 +1241,12 @@ button:hover {
 			align-items: center;
 			justify-content: start;
 			box-sizing: border-box;
-			padding:0px 4px;
+			padding: 0px 4px;
 			//flex:1 0 auto
 
 			@media screen and (width>=500px) {
-				padding:0px 12px;
+				padding: 0px 12px;
 			}
-
 		}
 	}
 }
@@ -1905,7 +1915,6 @@ button:hover {
 				padding: 0px;
 
 				//stroke: red;
-
 			}
 		}
 	}
